...
    <string name="common_action_add">Add</string>
    <string name="common_play_mix">Play Mix</string>
    <string name="common_loading">Loading…</string>
    <string name="common_selected_folder">Selected folder</string>
    <string name="common_failed_to_play">Failed to play</string>
    <string name="common_playlist_imported">Playlist imported: <xliff:g id="playlist" example="Road Trip">%1$s</xliff:g></string>
    <string name="common_add_to_playlist">Add to playlist</string>
    <string name="common_play_next">Play next</string>
    <string name="common_add_to_queue">Add to queue</string>
    <string name="common_enqueue_all">Enqueue all</string>
    <string name="common_share">Share</string>
    <string name="common_open_in_browser">Open in browser</string>
    <string name="common_loading_track">Loading track…</string>
...
    <!-- Common content descriptions -->
    <string name="common_cd_back">Back</string>
    <string name="common_cd_search">Search</string>
    <string name="common_cd_clear">Clear</string>
    <string name="common_cd_shuffle_play">Shuffle play</string>
    <string name="common_cd_now_playing">Now playing</string>
    <string name="common_cd_create_playlist">Create playlist</string>
    <string name="common_cd_more_options">More options</string>
    <string name="common_cd_reorder">Reorder</string>
    <string name="common_cd_delete">Delete</string>
    <string name="common_cd_downloaded">Downloaded</string>
    <string name="common_cd_import_playlist">Import playlist</string>

...
